--- a/app/src/main/res/layout/drawer_frag.xml
+++ b/app/src/main/res/layout/drawer_frag.xml
@@ -1,48 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:gravity="center_horizontal"
-              android:orientation="vertical">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:dividerPadding="@dimen/cmn_space"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:showDividers="middle">
 
     <ImageView
+        android:id="@+id/imgAvatar"
         android:layout_width="200dp"
-        android:layout_height="200dp"/>
+        android:layout_height="200dp" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/cmn_space" />
 
     <TextView
         android:id="@+id/mail"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/cmn_space" />
 
     <TextView
         android:id="@+id/roles"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/cmn_space" />
 
+    <TextView
+        android:id="@+id/btn_admin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/cmn_space"
+        android:gravity="center"
+        android:padding="@dimen/cmn_space"
+        android:text="@string/admin_page"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
-    <LinearLayout
+    <TextView
+        android:id="@+id/btn_conference"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/cmn_space"
+        android:gravity="center"
+        android:padding="@dimen/cmn_space"
+        android:text="@string/conferences"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+    <com.google.android.gms.common.SignInButton
+        android:id="@+id/sign_in_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/signin_msg"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
-
-        <com.google.android.gms.common.SignInButton
-            android:id="@+id/sign_in_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:onClick="onClick"/>
-    </LinearLayout>
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/cmn_space" />
 
 
     <Button
@@ -52,6 +65,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:onClick="onClick"
-        android:text="@string/signout"/>
+        android:layout_marginTop="@dimen/cmn_space"
+        android:text="@string/signout" />
 
 </LinearLayout>
