--- a/app/src/main/res/layout/conference_detail_frag.xml
+++ b/app/src/main/res/layout/conference_detail_frag.xml
@@ -3,20 +3,9 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal">
-    <TextView
-        android:id="@+id/tvLocation"
-        android:layout_marginTop="@dimen/cmn_space"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
-    <Button
-        android:layout_marginTop="@dimen/cmn_space"
-        android:id="@+id/timeStart"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-    <Button
-        android:layout_marginTop="@dimen/cmn_space"
-        android:id="@+id/timeEnd"
+    <FrameLayout
+        android:id="@+id/event_content"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
