--- a/app/src/main/res/layout/drawer_frag.xml
+++ b/app/src/main/res/layout/drawer_frag.xml
@@ -7,47 +7,85 @@
     android:orientation="vertical"
     android:showDividers="middle">
 
-    <ImageView
-        android:id="@+id/imgAvatar"
-        android:layout_width="200dp"
-        android:layout_height="200dp" />
-
-    <TextView
-        android:id="@+id/name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/cmn_space" />
-
-    <TextView
-        android:id="@+id/mail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/cmn_space" />
-
-    <TextView
-        android:id="@+id/roles"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/cmn_space" />
-
-    <TextView
-        android:id="@+id/btn_admin"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/cmn_space"
-        android:gravity="center"
-        android:padding="@dimen/cmn_space"
-        android:text="@string/admin_page"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imgAvatar"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size" />
+
+        <LinearLayout
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:orientation="vertical"
+            android:paddingLeft="@dimen/cmn_space">
+
+            <TextView
+                android:id="@+id/name"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/cmn_space" />
+
+            <TextView
+                android:id="@+id/mail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/cmn_space" />
+
+            <TextView
+                android:id="@+id/roles"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/cmn_space" />
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/group_admin"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/cmn_space"
+            android:padding="@dimen/cmn_space"
+            android:text="@string/admin_page"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+        <TextView
+            android:id="@+id/btn_admin_conferences"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/cmn_space"
+            android:padding="@dimen/cmn_space"
+            android:text="@string/conferences"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+
+        <TextView
+            android:id="@+id/btn_admin_users"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/fab_margin"
+            android:layout_marginTop="@dimen/cmn_space"
+            android:padding="@dimen/cmn_space"
+            android:text="@string/users"
+            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+    </LinearLayout>
 
     <TextView
         android:id="@+id/btn_conference"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/cmn_space"
-        android:gravity="center"
         android:padding="@dimen/cmn_space"
-        android:text="@string/conferences"
+        android:text="@string/your_conferences"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
     <com.google.android.gms.common.SignInButton
@@ -64,8 +102,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:onClick="onClick"
         android:layout_marginTop="@dimen/cmn_space"
+        android:onClick="onClick"
         android:text="@string/signout" />
 
 </LinearLayout>
