--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="cmn_space">10dp</dimen>
     <dimen name="fab_margin">30dp</dimen>
+    <dimen name="avatar_size">150dp</dimen>
 </resources>
